Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17726

Assertion `sqlcom != SQLCOM_TRUNCATE' failed in ha_innobase::delete_table after truncating temporary table

    XMLWordPrintable

Details

    Description

      --source include/have_innodb.inc
       
      CREATE TEMPORARY TABLE t1 (a INT) ENGINE=InnoDB;
      --send
        TRUNCATE TABLE t1;
      

      10.4 fde5386d16

      mysqld: /data/src/10.4/storage/innobase/handler/ha_innodb.cc:12934: virtual int ha_innobase::delete_table(const char*): Assertion `sqlcom != SQLCOM_TRUNCATE' failed.
      181115 16:56:33 [ERROR] mysqld got signal 6 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
       
      To report this bug, see https://mariadb.com/kb/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed, 
      something is definitely wrong and this may fail.
       
      Server version: 10.4.1-MariaDB-debug-log
      key_buffer_size=1048576
      read_buffer_size=131072
      max_used_connections=1
      max_threads=153
      thread_count=7
      It is possible that mysqld could use up to 
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 63331 K  bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x7f3018000b00
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x7f307038ee70 thread_stack 0x49000
      mysys/stacktrace.c:269(my_print_stacktrace)[0x5589734a72a1]
      sql/signal_handler.cc:168(handle_fatal_signal)[0x558972cf3c5c]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x110c0)[0x7f3078b0e0c0]
      linux/raise.c:51(__GI_raise)[0x7f307704ffcf]
      stdlib/abort.c:91(__GI_abort)[0x7f30770513fa]
      assert/assert.c:92(__assert_fail_base)[0x7f3077048e37]
      /lib/x86_64-linux-gnu/libc.so.6(+0x2bee2)[0x7f3077048ee2]
      

      That's the end of the error log, and coredump is not produced.

      It fails for me pretty much every time, maybe one or two misses from dozens of attempts.

      The test can be run as is, it can also be run with --nocheck-testcases, but --nowarnings makes a difference – with it, the failure is not reproducible. However, trying to imitate warnings activity within the test itself doesn't work.

      Attachments

        Activity

          People

            marko Marko Mäkelä
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 2.5h
                2.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.